@@ -1,3 +1,8 @@
+xxx
+---
+
+* Added spanish localization (messages_es.js)
+
 1.2.1
 -----
 
